welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: not found: value b
  var a=0;b=0
          ^averageValue:6: error: not found: value b
  b=a/nums.length
  ^averageValue:7: error: not found: value b
  return b
         ^